# arma-gtest-dont-behave

./: CMakeLists.txt  README.md  test.cpp  using_armadillo.cpp
